--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,33 @@
+html{
+    background-image:url("../images/background.jpg");
+    background-repeat: no-repeat;
+    background-size: 1350px, 900px;
+}
+body { 
+    font-family: 'Bubblegum Sans', cursive;
+    font-size: 100%;
+    width: 900px;
+    margin: 0 auto;
+}
+main {
+    font-family: 'Bubblegum Sans', cursive;
+    display: block;
+    width: 900px;
+    margin: 0 auto;
+    padding: 1em;
+    background: transparent;
+}
+header{
+    font-family: 'Bubblegum Sans', cursive;
+    background-size: 900px;
+    padding: 1em;
+    
+}
+
 nav{
     width: 937px;
     margin: 0 auto;
+    font-size: 2em;
 
 }
 nav ul {
@@ -8,7 +35,6 @@ nav ul {
     margin: 0 auto;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
 
 }
 
@@ -24,9 +50,55 @@ nav li a {
     text-decoration: none;
     margin: 0 auto;
 }
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
 
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 /* Change the link color to #111 (black) on hover */
-nav li a:hover {
+nav li a:hover, .dropdown:hover .dropbtn {
     background-color: #111;
 }
 
@@ -34,14 +106,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-main {
-    display: block;
-    width: 900px;
-    margin: 0 auto;
-    padding: 1em;
-    background: white;
-    border: 2px solid navy;
-}
 h1 {
     margin-top: 0;
     color: navy;
@@ -80,9 +144,6 @@ td, th {
     text-align: left;
 }
 
-#add_input input{
-    size: relative;
-}
 
 .capital_letters img{
     width: 5em;
@@ -90,11 +151,30 @@ td, th {
 }
 
 .lower_letter img{
-    width: 5em;
-    height: 5em;
+    width: 3em;
+    height: 3em;
     
 }
 
 .bottom_row_letters {
     align-content: center;
 }
+
+
+.weather {
+    float: right;
+}
+
+form {
+    display: inline-block; 
+}
+
+#image_button{
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
+    
